--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "your-project",
+  "name": "Lina-Whatsapp",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "Lina WhatsApp Bot with API integration",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.11.0",
+    "axios": "^0.24.0"
   }
 }
