--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Lina AI V3",
   "main": "script.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
